Engine/Scene/build_log_2.txt
[  3%] Built target glad
[ 42%] Built target glfw
[ 56%] Built target imgui
[ 59%] Built target ImGuizmo
[ 89%] Built target UICheckEngine
[ 91%] Building CXX object Editor/CMakeFiles/UICheckEditor.dir/Core/EditorLayer.cpp.obj
D:\ProjectsTest\UI\ENTT_YT\GitTests\initial\UI_Engine\Editor\Core\EditorLayer.cpp: In member function 'void EditorLayer::DrawViewportPanel()':
D:\ProjectsTest\UI\ENTT_YT\GitTests\initial\UI_Engine\Editor\Core\EditorLayer.cpp:466:64: error: 'class EditorCamera' has no member named 'GetProjection'; did you mean 'glm::mat4 EditorCamera::m_Projection'? (not accessible from this context)
  466 |             const glm::mat4& cameraProjection = m_EditorCamera.GetProjection();
      |                                                                ^~~~~~~~~~~~~
In file included from D:\ProjectsTest\UI\ENTT_YT\GitTests\initial\UI_Engine\Editor\Core\EditorLayer.hpp:15,
                 from D:\ProjectsTest\UI\ENTT_YT\GitTests\initial\UI_Engine\Editor\Core\EditorLayer.cpp:1:
D:/ProjectsTest/UI/ENTT_YT/GitTests/initial/UI_Engine/Engine/Rendering/Camera/EditorCamera.hpp:53:15: note: declared private here
   53 |     glm::mat4 m_Projection{ 1.0f };
      |               ^~~~~~~~~~~~
mingw32-make[2]: *** [Editor\CMakeFiles\UICheckEditor.dir\build.make:124: Editor/CMakeFiles/UICheckEditor.dir/Core/EditorLayer.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:413: Editor/CMakeFiles/UICheckEditor.dir/all] Error 2
mingw32-make: *** [Makefile:135: all] Error 2
